@@ -1,3 +1,8 @@
+1999-01-19  Raja R Harinath  <harinath@cs.umn.edu>
+
+	* gnome-cxx-check.m4 (GNOME_CHECK_CXX): Rewrite to be saner.  
+	Don't limit yourself to a fixed set of names for the compiler.
+
 1999-01-05  Miguel de Icaza  <miguel@nuclecu.unam.mx>
 
 	* need-declaration.m4, gnome-support.m4: Fixed the scandir detection.
